2004-11-22  Carl Worth  <cworth@cworth.org>

	* configure.ac: Remove AC_CONFIG_AUX_DIR (it was in the wrong
	place for automake-1.9, and it was set to the default value
	anyway).

2004-07-08  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* Xcomposite.c: (XCompositeVersion), (XCompositeNameWindowPixmap):
	* Xcomposite.h:
	* configure.ac:
	Add library API for Composite 0.2 changes
	Add XCompositeVersion to get the run-time library version number
	Fix package version number in configure.ac and Xcomposite.h

2004-02-03  Jim Gettys <jg@handhelds.org>

	* AUTHORS: Add authors to AUTHORS file

2004-01-15  Daniel Stone  <daniel@fooishbar.org>
	* Tag release 1.0 for first freedesktop.org clientside lib release.

2004-01-15  Harold L Hunt II <huntharo@msu.edu>
	* Makefile.am: Pass -no-undefined to libtool via LDFLAGS.