@@ -3,8 +3,8 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: Xdamage
+Name: Xcomposite
 Description: X Composite  Library
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @XCOMPOSITE_CFLAGS@ @X_CFLAGS@
-Libs: -L${libdir} -lXcomposite @XCOMPOSITE_LIBS@ @X_LIBS@
+Cflags: -I${includedir} @DEP_CFLAGS@
+Libs: -L${libdir} -lXcomposite @DEP_LIBS@
