@@ -1,3 +1,10 @@
+2005-07-11  Keith Packard  <keithp@keithp.com>
+
+	* configure.ac:
+	* xcomposite.pc.in:
+	Require modular X library.
+	Unify dependency _CFLAGS/_LIBS
+
 2004-11-22  Carl Worth  <cworth@cworth.org>
 
 	* configure.ac: Remove AC_CONFIG_AUX_DIR (it was in the wrong
